Bump versions for Java 17.